navbar-fixed on mobile display

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,7 +11,19 @@
 /*
   <----- Navbar styling ----->
 */
-
+@media (max-width: 450px) {
+  body {
+    margin-top: 50px;
+  }
+  .navbar{
+    z-index: 1200;
+    position: fixed;
+    right: 0;
+    left: 0;
+    border-radius: 0;
+    top: 0;
+  }
+}
 .navbar-laravel {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
